--- a/container/python/Dockerfile
+++ b/container/python/Dockerfile
@@ -11,11 +11,11 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-COPY api/requirements.txt .
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application
-COPY api/ .
+COPY . .
 
 # Create logs directory
 RUN mkdir -p /app/logs
