--- a/container/python/Dockerfile.test
+++ b/container/python/Dockerfile.test
@@ -10,11 +10,11 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-COPY api/requirements.txt .
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application
-COPY api/ .
+COPY . .
 
 # Run tests
 CMD ["pytest", "-v", "--cov=src", "--cov-report=term-missing"]
