--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,34 @@
 # Flask
 FLASK_ENV=development
-FLASK_SECRET_KEY=change-me-in-production
+FLASK_SECRET_KEY=dev-secret-key-change-in-production
 
 # Database
-DATABASE_URL=postgresql://vbwd:vbwd@localhost:5432/vbwd
+DATABASE_URL=postgresql://vbwd:vbwd@postgres:5432/vbwd
 POSTGRES_USER=vbwd
 POSTGRES_PASSWORD=vbwd
 POSTGRES_DB=vbwd
 
 # Redis
-REDIS_URL=redis://localhost:6379/0
+REDIS_URL=redis://redis:6379/0
 
 # JWT
-JWT_SECRET_KEY=change-me-in-production
+JWT_SECRET_KEY=dev-jwt-secret-change-in-production
 JWT_ACCESS_TOKEN_EXPIRES=3600
+
+# Email (optional in development)
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM_EMAIL=noreply@example.com
+SMTP_FROM_NAME=VBWD
 
 # Payment Providers (to be configured)
 # STRIPE_API_KEY=
 # STRIPE_WEBHOOK_SECRET=
 # PAYPAL_CLIENT_ID=
 # PAYPAL_CLIENT_SECRET=
+
+# External APIs (optional)
+# LOOPAI_API_URL=
+# LOOPAI_API_KEY=
