--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,11 +6,19 @@ services:
       context: .
       dockerfile: container/python/Dockerfile
     ports:
-      - "5001:5000"
+      - "5000:5000"
     environment:
-      - FLASK_ENV=development
-      - DATABASE_URL=postgresql://vbwd:vbwd@postgres:5432/vbwd
-      - REDIS_URL=redis://redis:6379/0
+      - FLASK_ENV=${FLASK_ENV:-development}
+      - FLASK_SECRET_KEY=${FLASK_SECRET_KEY:-dev-secret-key-change-in-production}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-dev-jwt-secret-change-in-production}
+      - DATABASE_URL=${DATABASE_URL:-postgresql://vbwd:vbwd@postgres:5432/vbwd}
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+      - SMTP_HOST=${SMTP_HOST:-}
+      - SMTP_PORT=${SMTP_PORT:-587}
+      - SMTP_USER=${SMTP_USER:-}
+      - SMTP_PASSWORD=${SMTP_PASSWORD:-}
+      - SMTP_FROM_EMAIL=${SMTP_FROM_EMAIL:-noreply@example.com}
+      - SMTP_FROM_NAME=${SMTP_FROM_NAME:-VBWD}
     volumes:
       - .:/app
     depends_on:
@@ -22,15 +30,15 @@ services:
   postgres:
     image: postgres:16-alpine
     environment:
-      POSTGRES_USER: vbwd
-      POSTGRES_PASSWORD: vbwd
-      POSTGRES_DB: vbwd
+      POSTGRES_USER: ${POSTGRES_USER:-vbwd}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-vbwd}
+      POSTGRES_DB: ${POSTGRES_DB:-vbwd}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U vbwd -d vbwd"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-vbwd} -d ${POSTGRES_DB:-vbwd}"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -50,9 +58,10 @@ services:
       context: .
       dockerfile: container/python/Dockerfile.test
     environment:
-      - PYTHONPATH=/app
-      - DATABASE_URL=postgresql://vbwd:vbwd@postgres:5432/vbwd_test
-      - REDIS_URL=redis://redis:6379/1
+      PYTHONPATH: /app
+      FLASK_ENV: testing
+      DATABASE_URL: "sqlite:///:memory:"
+      REDIS_URL: "redis://redis:6379/1"
     volumes:
       - .:/app
     depends_on:
