--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ celery[redis]==5.3.4
 PyJWT==2.8.0
 bcrypt==4.1.1
 cryptography==41.0.7
+Flask-Limiter==3.5.0
 
 # Validation & Serialization
 marshmallow==3.20.1
