--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ PyJWT==2.8.0
 bcrypt==4.1.1
 cryptography==41.0.7
 Flask-Limiter==3.5.0
+Flask-WTF==1.2.1
 
 # Validation & Serialization
 marshmallow==3.20.1
