--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,24 @@ SMTP_FROM_NAME=VBWD
 # External APIs (optional)
 # LOOPAI_API_URL=
 # LOOPAI_API_KEY=
+
+# ===========================================
+# Test Data Configuration
+# ===========================================
+# When true, seeds test data into PostgreSQL before tests run
+TEST_DATA_SEED=false
+
+# When true, removes test data from database after tests complete
+# When false, keeps test data in database for inspection/debugging
+TEST_DATA_CLEANUP=false
+
+# Test user credentials (used by seeding and E2E tests)
+TEST_USER_EMAIL=test@example.com
+TEST_USER_PASSWORD=TestPass123@
+
+# Test admin credentials
+TEST_ADMIN_EMAIL=admin@example.com
+TEST_ADMIN_PASSWORD=AdminPass123@
+
+# Backend URL for integration tests
+API_BASE_URL=http://localhost:5000/api/v1
