--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,6 +53,15 @@ services:
       timeout: 5s
       retries: 5
 
+  adminer:
+    image: adminer:latest
+    ports:
+      - "8080:8080"
+    environment:
+      ADMINER_DEFAULT_SERVER: postgres
+    depends_on:
+      - postgres
+
   test:
     build:
       context: .
@@ -68,6 +77,38 @@ services:
       - redis
     profiles:
       - test
+
+  # Integration tests with real PostgreSQL and HTTP requests
+  test-integration:
+    build:
+      context: .
+      dockerfile: container/python/Dockerfile.test
+    environment:
+      PYTHONPATH: /app
+      FLASK_ENV: testing
+      # Use PostgreSQL for integration tests
+      DATABASE_URL: "postgresql://vbwd:vbwd@postgres:5432/vbwd"
+      REDIS_URL: "redis://redis:6379/1"
+      # Test data configuration
+      TEST_DATA_SEED: "${TEST_DATA_SEED:-true}"
+      TEST_DATA_CLEANUP: "${TEST_DATA_CLEANUP:-false}"
+      TEST_USER_EMAIL: "${TEST_USER_EMAIL:-test@example.com}"
+      TEST_USER_PASSWORD: "${TEST_USER_PASSWORD:-TestPass123@}"
+      TEST_ADMIN_EMAIL: "${TEST_ADMIN_EMAIL:-admin@example.com}"
+      TEST_ADMIN_PASSWORD: "${TEST_ADMIN_PASSWORD:-AdminPass123@}"
+      # API URL for HTTP integration tests
+      API_BASE_URL: "http://api:5000/api/v1"
+    volumes:
+      - .:/app
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      api:
+        condition: service_started
+    profiles:
+      - test-integration
 
 volumes:
   postgres_data:
