--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ celery[redis]==5.3.4
 
 # Authentication & Security (Sprint 2)
 PyJWT==2.8.0
+Flask-JWT-Extended==4.5.3
 bcrypt==4.1.1
 cryptography==41.0.7
 Flask-Limiter==3.5.0
