--- a/nginx.proxy.conf
+++ b/nginx.proxy.conf
@@ -1,17 +1,26 @@
 # ── VBWD Proxy ────────────────────────────────────────────────────────────────
-# Place at ~/web_server/vbwd_app/nginx.proxy.conf on the server
+# Path-based routing — works with bare IP and any domain.
 #
-# Set your domains in /etc/hosts or DNS:
-#   vbwd.yourdomain.com       → user app
-#   admin.vbwd.yourdomain.com → admin app
+#   http://<server>/          → user app
+#   http://<server>/admin/    → admin app
 #
-# For SSL: uncomment the HTTPS blocks and mount certs into ./ssl/
+# For subdomain routing, see the commented block at the bottom.
 
-# ── User App ──────────────────────────────────────────────────────────────────
 server {
-    listen 80;
-    server_name vbwd.yourdomain.com;
+    listen 80 default_server;
+    server_name _;
 
+    # ── Admin app (/admin/) ───────────────────────────────────────────────────
+    location /admin {
+        proxy_pass         http://vbwd_fe_admin:80;
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_read_timeout 60s;
+    }
+
+    # ── User app (everything else) ────────────────────────────────────────────
     location / {
         proxy_pass         http://vbwd_fe_user:80;
         proxy_set_header   Host              $host;
@@ -22,46 +31,27 @@ server {
     }
 }
 
-# ── Admin App ─────────────────────────────────────────────────────────────────
-server {
-    listen 80;
-    server_name admin.vbwd.yourdomain.com;
-
-    location / {
-        proxy_pass         http://vbwd_fe_admin:80;
-        proxy_set_header   Host              $host;
-        proxy_set_header   X-Real-IP         $remote_addr;
-        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto $scheme;
-        proxy_read_timeout 60s;
-    }
-}
-
-# ── HTTPS (uncomment after getting SSL certs) ─────────────────────────────────
+# ── Subdomain routing (uncomment when real domains are configured) ─────────────
 # server {
-#     listen 443 ssl;
+#     listen 80;
 #     server_name vbwd.yourdomain.com;
-#     ssl_certificate     /etc/nginx/ssl/vbwd.crt;
-#     ssl_certificate_key /etc/nginx/ssl/vbwd.key;
 #     location / {
 #         proxy_pass http://vbwd_fe_user:80;
 #         proxy_set_header Host $host;
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto https;
+#         proxy_set_header X-Forwarded-Proto $scheme;
 #     }
 # }
 #
 # server {
-#     listen 443 ssl;
+#     listen 80;
 #     server_name admin.vbwd.yourdomain.com;
-#     ssl_certificate     /etc/nginx/ssl/admin.vbwd.crt;
-#     ssl_certificate_key /etc/nginx/ssl/admin.vbwd.key;
 #     location / {
 #         proxy_pass http://vbwd_fe_admin:80;
 #         proxy_set_header Host $host;
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto https;
+#         proxy_set_header X-Forwarded-Proto $scheme;
 #     }
 # }
